# aoc2024

./: aoc2024.cabal  stack.yaml
scripts/: day01.sh
src/: Day01.hs  Day02.hs  Day03.hs  Main.hs  TSVReader.hs  Utils.hs
