cabal-version:       2.2

name:                aoc2024
version:             0.1.0.0
-- synopsis:
description:         Advent of Code 2024
homepage:            https://github.com/tlehman/aoc2024#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tobi Lehman
maintainer:          mail@tobilehman.com
copyright:           2024 Tobi Lehman
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
executable aoc2024
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
